--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,4 +1,3 @@
-{% comment %}
 <!--
 Using `preload` so that page rendering doesn't get blocked.
 Fill in `href`. You may have to adjust `as` and `onload`/`rel`, depending on content.
@@ -10,4 +9,10 @@ Fallback in case JavaScript isn't enabled.
 Fill in `href`. You may have to adjust `rel`.
 -->
 <noscript><link href="<path/to/content.css>" rel="stylesheet"></noscript>
-{% endcomment %}
+
+
+<!--slick-->
+<link rel="stylesheet" type="text/css" href="/assets/css/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="/assets/css/slick/slick-theme.css"/>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="/assets/css/slick/slick.min.js"></script>
