--- a/_includes/body/menu.html
+++ b/_includes/body/menu.html
@@ -25,7 +25,7 @@
           </div>
           
           <!--검색 tipuesearch -->
-          <div class="nav-span">
+          <!-- <div class="nav-span">
             <form action="/search">
                 <div class="tipue_search_left">
                   <img src="/assets/tipuesearch/search.png" class="tipue_search_icon">
@@ -34,7 +34,7 @@
                   <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required></div>
                 <div style="clear: both;"></div>
               </form>
-          </div>
+          </div> -->
           
       </div>
   </div>
