--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -52,20 +52,20 @@ http://www.tipue.com/search
 }
 .tipue_search_icon
 {
-     width: 19px;
-     height: 19px;
+     width: 10px;
+     height: 10px;
      margin-bottom: 1rem;
 }
 .tipue_search_left
 {
      float: left;
-     padding: 10px 5px 0 0;
+     padding: 0px 0px 0 0;
      color: #170247;
-     max-height: 20px;
+     max-height: 10px;
 }
 .tipue_search_right
 {
-     float: left;
+     float: right;
 }
 
 
